--- a/project1/css/proposal.css
+++ b/project1/css/proposal.css
@@ -19,7 +19,7 @@
   text-align: justify;
 }
 
-@media only screen and (max-width: 540px){
+@media only screen and (max-device-width: 540px){
   #Center > p {
     font-size: 1.17em;
     text-align: justify;
