Finish week2 hw

--- a/project1/css/global.css
+++ b/project1/css/global.css
@@ -59,6 +59,10 @@ a:active {
 	background: white;
 }
 
+#CopyrightText {
+	background: white;
+}
+
 .LicenseLogo {
 	display: inline-block;
 	border: none;
