--- a/week2/home/css/global.css
+++ b/week2/home/css/global.css
@@ -28,7 +28,7 @@ a:link {
 }
 
 a:visited {
-	color: gray;
+	color: black;
 }
 
 a:visited:hover {
@@ -52,7 +52,11 @@ a:active {
 
 	opacity: 0;
 	animation: appear 0.5s ease-in forwards;
-	animation-delay: 5s;
+	animation-delay: 1s;
+}
+
+#CopyrightText {
+	background: white;
 }
 
 #LicenseLogoAnchor:hover {
@@ -163,6 +167,18 @@ a:active {
 
 .Fixed  {
 	position: fixed;
+}
+
+.FlexSpaceAround {
+	display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.FlexSpaceBetween {
+	display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .FlexCenter {
