--- a/week2/home/css/global.css
+++ b/week2/home/css/global.css
@@ -173,6 +173,7 @@ a:active {
 	display: flex;
   justify-content: space-around;
   align-items: center;
+	flex-wrap: wrap;
 }
 
 .FlexSpaceBetween {
