--- a/week2/home/css/index.css
+++ b/week2/home/css/index.css
@@ -20,27 +20,12 @@ li {
   line-height: 1.35em;
 }
 
-#Title {
-	opacity: 0;
-	animation: appear 0.5s ease-in forwards;
-	animation-delay: 1s;
-}
-
-#Subtitle {
-	opacity: 0;
-	animation: appear 0.5s ease-in forwards;
-	animation-delay: 2s;
-}
-
-#Description {
-	opacity: 0;
-	animation: appear 0.5s ease-in forwards;
-	animation-delay: 3s;
-}
-
 #PortraitContainer {
+  opacity: 0;
   right: 0;
   top: 0;
+  animation: appear 0.5s ease-in forwards;
+	animation-delay: 0.5s;
 }
 
 #Portrait {
@@ -56,8 +41,11 @@ li {
 }
 
 #GithubLinkContainer {
+  opacity: 0;
   right: 45px;
   bottom: 45px;
+  animation: appear 0.5s ease-in forwards;
+  animation-delay: 2s;
 }
 
 #GithubIcon {
@@ -70,6 +58,11 @@ li {
 }
 
 #ProjectLinksContainer {
-  height: 90px;
   width: 100%;
+  margin-top: 18px;
+  margin-bottom: 18px;
+}
+
+#ProjectLinksContainer a {
+  margin: 9px;
 }
