Refactor navigation, expand button. Ready to revision

--- a/project1/css/documentation.css
+++ b/project1/css/documentation.css
@@ -15,3 +15,9 @@ li {
   margin-bottom: 0.9em;
   line-height: 1.35em;
 }
+
+@media only screen and (max-device-width: 540px){
+	#Center {
+		top: 270px;
+	}
+}
