--- a/project1/css/documentation.css
+++ b/project1/css/documentation.css
@@ -16,7 +16,7 @@ li {
   line-height: 1.35em;
 }
 
-@media only screen and (max-device-width: 540px){
+@media only screen and (max-width: 540px){
 	#Center {
 		top: 270px;
 	}
