--- a/project1/css/proposal.css
+++ b/project1/css/proposal.css
@@ -20,7 +20,7 @@
   text-align: justify;
 }
 
-@media only screen and (max-device-width: 540px){
+@media only screen and (max-width: 540px){
 	#Center {
 		top: 270px;
 	}
