--- a/project1/css/proposal.css
+++ b/project1/css/proposal.css
@@ -15,7 +15,7 @@
   animation-delay: 0.5s;
 }
 
-#Center > p {
+.FadeInArticle > p {
   font-size: 1.35em;
   text-align: justify;
 }
@@ -25,7 +25,7 @@
 		top: 270px;
 	}
 
-  #Center > p {
+  .FadeInArticle > p {
     font-size: 1.17em;
     text-align: justify;
   }
@@ -38,20 +38,33 @@
 }
 
 
-#Center > p:nth-child(3) {
+.FadeInArticle > p:nth-child(1) {
   opacity: 0;
   animation: appear 0.5s ease-in forwards;
   animation-delay: 1.5s;
 }
 
-#Center > p:nth-child(4) {
+.FadeInArticle > p:nth-child(2) {
   opacity: 0;
   animation: appear 0.5s ease-in forwards;
   animation-delay: 2.5s;
 }
 
-#Center > p:nth-child(5) {
+.FadeInArticle > p:nth-child(3) {
   opacity: 0;
   animation: appear 0.5s ease-in forwards;
   animation-delay: 3.5s;
+}
+
+.FadeInArticle > p:nth-child(4) {
+  opacity: 0;
+  animation: appear 0.5s ease-in forwards;
+  animation-delay: 4.5s;
+}
+
+
+.FadeInArticle > p:nth-child(5) {
+  opacity: 0;
+  animation: appear 0.5s ease-in forwards;
+  animation-delay: 5.5s;
 }
