--- a/project1/css/global.css
+++ b/project1/css/global.css
@@ -1,3 +1,5 @@
+/* Global style */
+
 body {
 	overflow-x: hidden;
 	margin: 0;
@@ -7,6 +9,7 @@ hr {
 	margin-bottom: 2em;
 }
 
+/* Header style */
 h1, h2, h3 {
 	font-family: monospace;
 	display: block;
