--- a/project2/css/playing-board.css
+++ b/project2/css/playing-board.css
@@ -36,15 +36,15 @@
   background: white;
   height: 100%;
   width: 20%;
+
+}
+
+.Avatar .Card {
+  max-width: 100%;
 }
 
 .Point {
   background: gray;
   height: 100%;
   width: 15%;
-}
-
-#NPCSide .Hand {
-  transform: rotateX(180deg);
-  pointer-events: none;
 }
