--- a/project2/css/card.css
+++ b/project2/css/card.css
@@ -8,9 +8,13 @@
 
 	display: flex;
 	justify-content: center;
-	/*animation: Float 2s ease-in-out infinite alternate;*/
+
 	transform-style: preserve-3d;
 
+}
+
+.Card:hover {
+	z-index: 10;
 }
 
 .CardContainer {
@@ -18,11 +22,31 @@
 	height: 15vh;
 	width: 10.8vh;
 
+	box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3), 0 17px 17px 0 rgba(0, 0, 0, 0.15);
+
 	transition: 1s ease;
 }
 
-.Flipped {
-	transform: rotateY(180deg);
+.CardPoint {
+	font-family: "Bubblegum Sans", sans-serif;
+
+	width: 20%;
+	height: 20%;
+	background: black;
+
+	position: absolute;
+
+	top: 0;
+	right: 0;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.CardImage {
+	width: 90%;
+	max-height: 80%;
 }
 
 .Card:hover .CardContainer {
@@ -54,7 +78,10 @@
 }
 
 .CardFace {
-
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .CardBack {
@@ -79,14 +106,5 @@
   100% {
     opacity: 0;
     transform: scale(1.15);
-  }
-}
-
-@keyframes Float {
-  0% {
-    transform: rotateY(0) translateY(0);
-  }
-  100% {
-       transform: translateY(0.5rem);
   }
 }
