--- a/project2/css/card.css
+++ b/project2/css/card.css
@@ -59,6 +59,7 @@
 	transform: translateY(-144px) scale(1.44);
 }
 
+/* Card face: */
 .CardFace,
 .CardBack{
   position: absolute;
@@ -88,6 +89,39 @@
 .CardBack {
 	background: black;
 	transform: rotateY(180deg);
+}
+
+/*CARD TOOLTIP: */
+.CardTooltip {
+	position: absolute;
+
+  display: flex;
+  flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+  left: 180%;
+	bottom: 100%;
+  height: 100%;
+
+	pointer-events: none;
+}
+
+.CardTooltip p {
+	font-family: "Bubblegum Sans", sans-serif;
+
+	padding: 0.5em;
+
+	font-size: 1.2em;
+	opacity: 0;
+	background: white;
+	transition: 1s;
+	display:inline-block;
+	width: 18vw;
+	max-width: 135px;
+}
+
+.Card:hover .CardTooltip p {
+	opacity: 1;
 }
 
 @keyframes Flip {
