--- a/project2/css/documentation.css
+++ b/project2/css/documentation.css
@@ -12,7 +12,7 @@ body {
 
 p {
   font-family: sans-serif;
-	line-height: 2em;	
+	line-height: 2em;
 }
 
 li {
@@ -21,6 +21,9 @@ li {
 
 #Content {
   padding-top: 90px;
+
+	padding-bottom: 27vh;
+
   width: 72vw;
   max-width: 720px;
 }
