--- a/project2/css/global.css
+++ b/project2/css/global.css
@@ -36,7 +36,7 @@ ul {
 }
 
 a {
-	opacity: 0.54;
+	opacity: 1;
 
 	transition: 0.36s;
 }
@@ -54,7 +54,7 @@ a:visited:hover {
 }
 
 a:hover {
-	opacity: 1;
+	color: azure;
 	text-decoration: underline;
 }
 
