--- a/project2/css/card.css
+++ b/project2/css/card.css
@@ -14,6 +14,8 @@
 }
 
 .Card:hover {
+	cursor: pointer;
+
 	z-index: 10;
 }
 
@@ -31,6 +33,7 @@
 
 	width: 20%;
 	height: 20%;
+	color: white;
 	background: black;
 
 	position: absolute;
@@ -72,6 +75,7 @@
   border: 5px solid white;
 
   border-radius: 5px;
+	background: black;
   color: white;
 
   backface-visibility: hidden;
@@ -87,7 +91,6 @@
 }
 
 .CardBack {
-	background: black;
 	transform: rotateY(180deg);
 }
 
@@ -113,6 +116,7 @@
 
 	font-size: 1.2em;
 	opacity: 0;
+	color: black;
 	background: white;
 	transition: 1s;
 	display:inline-block;
@@ -122,24 +126,4 @@
 
 .Card:hover .CardTooltip p {
 	opacity: 1;
-}
-
-@keyframes Flip {
-	0% {
-    transform: translateY(0) rotateY(0) scale(1);
-  }
-  100% {
-		transform: translateY(-144px) rotateY(360deg) scale(1.44);
-  }
-}
-
-@keyframes Fade {
-  0% {
-    opacity: 0.9;
-    transform: scale(1);
-  }
-  100% {
-    opacity: 0;
-    transform: scale(1.15);
-  }
 }
