--- a/project2/css/playing-board.css
+++ b/project2/css/playing-board.css
@@ -1,5 +1,6 @@
 .HalfPlayingBoard {
   background: #444;
+	color: white;
   width: 63vw;
   height: 47.7vh;
   display: flex;
@@ -9,6 +10,7 @@
 }
 
 .Stats {
+	color: white;
   background: #111;
   width: 100%;
   height: 30%;
@@ -18,21 +20,23 @@
 }
 
 .Equipment {
+	color: white;
   background: #555;
   width: 100%;
   height: 40%;
 }
 
 .Hand {
+	color: black;
   background: #999;
   width: 100%;
   height: 30%;
-
   display: flex;
   justify-content: center;
 }
 
 .Avatar {
+	color: black;
   background: white;
   height: 100%;
   width: 20%;
@@ -40,18 +44,32 @@
 
 .Avatar .Card {
   max-width: 100%;
-	animation: Float 2s ease-in-out infinite alternate;
+  animation: Float 2s ease-in-out infinite alternate;
+}
+
+.EquipmentLabel {
+  justify-content: flex-start;
+  align-items: flex-start;
+  position: relative;
+  width: 100%;
+  height: 0;
+}
+
+.EquipmentLabel h2 {
+	padding: 1em;
+	text-shadow: 3px 3px 3px black;
 }
 
 .Equipment .Card {
-	margin: 0 1vw;
+  margin: 0 1vw;
 }
 
 .Hand .Card {
-	margin: 0 1vw;
+  margin: 0 1vw;
 }
 
 .Point {
+	color: white;
   background: gray;
   height: 100%;
   width: 15%;
