--- a/project2/css/index.css
+++ b/project2/css/index.css
@@ -27,6 +27,11 @@ body {
   width: 14.4vw;
   height: 100vh;
   /*background: #111;*/
+
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: flex-start;
 }
 
 #PlayerSide {}
