--- a/project2/css/central-deck.css
+++ b/project2/css/central-deck.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
 }
 
 .CentralDeckCard h2 {
@@ -30,6 +31,8 @@
   justify-content: center;
   align-items: center;
   transition: 0.2s;
+	box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3), 0 17px 17px 0 rgba(0, 0, 0, 0.15);
+
 }
 
 .CentralDeckCard:before {
