--- a/project2/css/global.css
+++ b/project2/css/global.css
@@ -85,6 +85,7 @@ footer {
 	height: 3em;
 	width: 100vw;
 	background: #333;
+	font-family: "Bubblegum Sans", sans-serif;
 }
 
 #LicenseLogoAnchor {
@@ -151,6 +152,31 @@ footer {
 	opacity: 0;
 	animation: appear 0.5s ease-in forwards;
 	animation-delay: 4s;
+}
+
+.Overlay {
+	width: 100vw;
+	height: 100vh;
+
+	background: rgba(0, 0, 0, 0.81);
+
+	position: absolute;
+
+	z-index: 999;
+
+	overflow-x: hidden;
+
+	transition: 0.45s;
+}
+
+.SideBar {
+	position: fixed;
+	color: white;
+	background-color: rgba(100, 100, 100, 0.3);
+	width: 144px;
+	height: 100vh;
+	z-index: 1008;
+	transition: 0.45s;
 }
 
 @media only screen and (max-width: 630px){
