--- a/project2/css/interface.css
+++ b/project2/css/interface.css
@@ -1,17 +1,14 @@
 #Interface {
-  position: fixed;
-	color: white;
-  background-color: rgba(100, 100, 100, 0.2);
-  left: -126px;
-  width: 144px;
-  height: 100vh;
-  z-index: 1008;
-  transition: 0.45s;
-  animation: RetractLeft 0.9s;
+	left: -126px;
+	animation: RetractLeft 0.9s;
 }
 
 #Interface:hover {
   padding-left: 126px;
+}
+
+#Interface.ShowInterface {
+	padding-left: 126px;
 }
 
 .InterfaceButton {
@@ -82,7 +79,7 @@
   .InterfaceButton .oi {
     right: -3em;
   }
-	
+
   .ActiveButton {
     padding-right: 5em;
   }
