--- a/project2/css/central-deck.css
+++ b/project2/css/central-deck.css
@@ -2,7 +2,7 @@
   /*background: #444;*/
   width: 100%;
   max-width: 90px;
-  /*height: 135px;*/
+  height: 180px;
   display: flex;
   flex-direction: column;
   justify-content: center;
