Adding anouncement dialog

--- a/project2/css/animation.css
+++ b/project2/css/animation.css
@@ -84,3 +84,15 @@
    	transform: translateY(-9px);
   }
 }
+
+@keyframes ButtonPop {
+	0% {
+		transform: scale(1);
+	}
+	50% {
+		transform: scale(1.35);
+	}
+	100% {
+		transform: scale(1);
+	}
+}
